# solvespace

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .mailmap  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  KEYBOARD_GROUP_NAVIGATION_TEST.md  KEYBOARD_NAVIGATION_TEST.md  MAINTAINER_COMMENT.md  MISSING_FEATURES.md  Makefile  Makefile.am  Makefile.msvc  PR_DESCRIPTION.md  README.md  THIRD_PARTIES.txt  appveyor.yml  autogen.sh  bitmapextra.table.h  bitmapfont.table  bitmapfont.table.h  bsp.cpp  clipboard.cpp  cmdline.cpp  configure.ac  confscreen.cpp  constraint.cpp  constrainteq.cpp  default.nix  describescreen.cpp  draw.cpp  drawconstraint.cpp  drawentity.cpp  (+46 more)
bench/: CMakeLists.txt  harness.cpp
cython/: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
cython/platform/: config.h  cygwinccompiler.diff  pyconfig.diff  set_pycompiler.bat
cython/python_solvespace/: __init__.py  slvs.pxd  slvs.pyi  slvs.pyx
cython/python_solvespace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cython/solvespace/: __init__.py  slvs.pxd  slvs.pyi  slvs.pyx
cython/test/: __main__.py  test_slvs.py
cython/tests/: __main__.py  test_slvs.py
exposed/: CDemo.c  CMakeLists.txt  DOC.txt  Makefile  Makefile.am  Makefile.msvc  VbDemo.vb  example.c  lib.cpp  slvs.h
exposed/CsDemo/: .gitignore  CsDemo.cs  Solver.cs
python/: CMakeLists.txt  bindings.cpp  rebuild.sh
python/slvs/: __init__.py  solvespace.pyi
python/solvespace/: __init__.py  __init__.pyi  solvespace.pyi
python/solvespace/slvs/: __init__.pyi
python/tests/: __main__.py  test.py
src/: CMakeLists.txt  Makefile.am  bsp.cpp  clipboard.cpp  commandline.cpp  config.h.in  confscreen.cpp  constraint.cpp  constraint.h  constraintdesc.cpp  constrainteq.cpp  constraintmenu.cpp  constraintmenu.h  defs.h  describescreen.cpp  draw.cpp  drawconstraint.cpp  drawentity.cpp  dsc.h  entity.cpp  entity.h  equation.h  export.cpp  exportgeo.cpp  exportstep.cpp  exportvector.cpp  expr.cpp  expr.h  file.cpp  filewriters.h  font.table.h  generate.cpp  glhelper.cpp  globals.cpp  globals.h  graphicswin.cpp  group.cpp  group.h  groupbase.cpp  groupmesh.cpp  (+60 more)
src/built/: bitmapextra.table.h  icons-proto.h  icons.h
src/cocoa/: SaveFormatAccessory.xib  cocoamain.mm
src/core/: CMakeLists.txt  api.cpp  bsp.cpp  constraint.cpp  constrainteq.cpp  entity.cpp  export.cpp  exportstep.cpp  exportvector.cpp  expr.cpp  file.cpp  generate.cpp  group.cpp  groupmesh.cpp  importdxf.cpp  importmesh.cpp  mesh.cpp  polygon.cpp  polyline.cpp  request.cpp  resource.cpp  solvespace_core.cpp  style.cpp  system.cpp  ttf.cpp  undoredo.cpp  util.cpp
src/core/srf/: boolean.cpp  merge.cpp  raycast.cpp  shell.cpp
src/fltk/: fltkmain.cpp  fltkutil.cpp  xFl_Gl_Window_Group.H  xFl_Gl_Window_Group.cxx
src/gtk/: gtkmain.cpp
src/platform/: CMakeLists.txt  climain.cpp  cocoamain.mm  entrycli.cpp  entrygui.cpp  events.h  gloffscreen.cpp  gloffscreen.h  gtkmain.cpp  gui.cpp  gui.h  guigtk.cpp  guigtk4.cpp  guihtml.cpp  guimac.mm  guinone.cpp  guiqt.cpp  guiqt.h  guiwin.cpp  headless.cpp  platform.cpp  platform.h  platformbase.cpp  qglmainwindow.h  spnavdevice.cpp  spnavdevice.h  unixutil.cpp  utilunix.cpp  utilwin.cpp  w32main.cpp  w32util.cpp
src/platform/css/: button.css  dialog.css  editor_overlay.css  editor_overlay.css.h  gl_area.css  header.css  theme_colors.css  theme_colors.css.h  window.css  window.css.h
src/platform/html/: emshell.html  filemanagerui.js  solvespaceui.css  solvespaceui.js
src/pure_platform/: CMakeLists.txt  platform.cpp  platform.h  utilunix.cpp  utilwin.cpp
src/render/: camera.h  canvas.h  gl2shader.cpp  gl2shader.h  gl3shader.cpp  gl3shader.h  lighting.h  render.cpp  render.h  render2d.cpp  rendercairo.cpp  rendergl.cpp  rendergl1.cpp  rendergl2.cpp  rendergl3.cpp  stipplepattern.h
src/slvs/: CMakeLists.txt  jslib.cpp  lib.cpp  lib.pyx
src/srf/: boolean.cpp  chamfer.cpp  curve.cpp  merge.cpp  ratpoly.cpp  raycast.cpp  sbezier.h  sbspuv.h  scurve.h  scurvept.h  shell.cpp  sshell.h  ssurface.h  surface.cpp  surface.h  surfinter.cpp  triangulate.cpp
src/ui/: clipboard.cpp  confscreen.cpp  draw.cpp  drawentity.cpp  mouse.cpp  textwin.cpp  toolbar.cpp
src/unix/: gloffscreen.cpp  gloffscreen.h  solvespace.desktop  unixutil.cpp
src/util/: CMakeLists.txt  ss_assert.cpp  ss_assert.h  ss_util.cpp  ss_util.h
src/win32/: freeze.cpp  manifest.xml  resource.rc  w32main.cpp  w32util.cpp
test/: CMakeLists.txt  commit.sh  debugtool.cpp  harness.cpp  harness.h
test/analysis/contour_area/: normal.slvs  test.cpp
test/benchmarks/: 8040-profile.slvs  8040.slvs
test/constraint/angle/: free_in_3d.slvs  free_in_3d_v20.slvs  free_in_3d_v22.slvs  normal.slvs  normal_v20.slvs  normal_v22.slvs  reference.slvs  reference_free_in_3d.slvs  reference_free_in_3d_v20.slvs  reference_free_in_3d_v22.slvs  reference_v20.slvs  reference_v22.slvs  skew.slvs  test.cpp
test/constraint/arc_line_tangent/: normal.slvs  normal_v20.slvs  normal_v22.slvs
test/constraint/at_midpoint/: line_plane_free_in_3d.slvs  line_plane_free_in_3d_v20.slvs  line_plane_free_in_3d_v22.slvs  line_plane_normal.slvs  line_plane_normal_v20.slvs  line_pt_free_in_3d.slvs  line_pt_free_in_3d_v20.slvs  line_pt_free_in_3d_v22.slvs  line_pt_normal.slvs  normal.slvs  normal_v20.slvs  test.cpp
test/constraint/comment/: normal.slvs  normal_v20.slvs  normal_v22.slvs
test/constraint/cubic_line_tangent/: free_in_3d.slvs  free_in_3d_v20.slvs  free_in_3d_v22.slvs  normal.slvs  normal_v20.slvs
test/constraint/curve_curve_tangent/: arc_arc.slvs  arc_arc_v22.slvs  arc_cubic.slvs  arc_cubic_v20.slvs  normal_v20.slvs  test.cpp
test/constraint/diameter/: normal.slvs  normal_v20.slvs  normal_v22.slvs  reference.slvs  reference_v20.slvs  reference_v22.slvs  test.cpp
test/constraint/eq_len_pt_line_d/: normal.slvs  normal_v20.slvs  normal_v22.slvs
test/constraint/eq_pt_ln_distances/: normal.slvs  normal_v20.slvs  (+1 more)
test/expr/: test.cpp
test/platform/: CMakeLists.txt
(+367 files in other folders)
